--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,7 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
+
     </LinearLayout>
 
 
@@ -41,6 +42,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="291dp"
+            android:layout_height="86dp"
+            app:srcCompat="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="CalmCompass"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="34sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,8 +70,8 @@
 
         <EditText
             android:id="@+id/emailEditLoginText"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_width="357dp"
+            android:layout_height="45dp"
             android:layout_margin="20dp"
             android:background="@drawable/curved_progress_bar"
             android:hint="Email"
@@ -66,8 +83,8 @@
 
         <EditText
             android:id="@+id/passwordEditLoginText"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_width="357dp"
+            android:layout_height="45dp"
             android:layout_margin="20dp"
             android:background="@drawable/curved_progress_bar"
             android:hint="Password"
