--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -15,7 +15,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="200dp"
             android:layout_weight="4"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_login" />
@@ -53,9 +53,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="516dp"
         android:gravity="center"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="179dp"
+            android:layout_height="64dp"
+            app:srcCompat="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="302dp"
+            android:layout_height="57dp"
+            android:layout_centerHorizontal="true"
+            android:text="CalmCompass"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="34sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -68,8 +84,8 @@
 
         <EditText
             android:id="@+id/emailEditLoginText"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_width="355dp"
+            android:layout_height="48dp"
             android:layout_margin="20dp"
             android:background="@drawable/curved_progress_bar"
             android:hint="Email"
@@ -81,8 +97,8 @@
 
         <EditText
             android:id="@+id/passwordEditLoginText"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_width="356dp"
+            android:layout_height="52dp"
             android:layout_margin="20dp"
             android:background="@drawable/curved_progress_bar"
             android:hint="Password"
