--- a/app/src/main/res/layout/fragment_bed_time.xml
+++ b/app/src/main/res/layout/fragment_bed_time.xml
@@ -17,7 +17,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/baloo_paaji"
-        android:text="Please enter how long you sleep for"
+        android:text="Enter Amount of hours you sleep. "
         android:textAlignment="center"
         android:textColor="#F4EFEF"
         android:textSize="48sp" />
@@ -29,23 +29,23 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="120dp"
-        android:layout_marginBottom="178dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginBottom="232dp"
         android:background="@drawable/innerblckround_btn"
-        android:text="Button"
+        android:text="submit"
         android:textColor="#E8E8E8" />
 
     <EditText
         android:id="@+id/editHoursText"
-        android:layout_width="248dp"
-        android:layout_height="79dp"
+        android:layout_width="273dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="262dp"
+        android:layout_marginBottom="297dp"
         android:background="@drawable/round_btn"
         android:ems="10"
+        android:hint="Enter Amount of hours you sleep"
         android:inputType="textPersonName"
-        android:text="Enter Hours you sleep"
         android:textAlignment="center"
         android:textColor="#000000" />
 
