--- a/app/src/main/res/layout/fragment_get_screen_time.xml
+++ b/app/src/main/res/layout/fragment_get_screen_time.xml
@@ -10,14 +10,14 @@
     <ProgressBar
         android:id="@+id/progressBar2"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="313dp"
-        android:layout_height="wrap_content"
+        android:layout_width="310dp"
+        android:layout_height="3dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="330dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="293dp"
         android:background="@drawable/buttonbckblack"
         android:progressDrawable="@drawable/curved_progress_bar" />
 
@@ -29,12 +29,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="295dp"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="532dp"
         android:fontFamily="@font/baloo_paaji"
         android:text="0%"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="34sp" />
 
     <TextView
@@ -44,36 +44,35 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
+        android:background="@drawable/curved_progress_bar"
         android:fontFamily="@font/baloo_paaji"
         android:text="Checking Screen Usage will allow me see much you use your phone"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/screenTimeTextView"
-        android:layout_width="256dp"
-        android:layout_height="66dp"
-        android:layout_alignParentStart="true"
+    <Button
+        android:id="@+id/SubmitTime"
+        android:layout_width="169dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="79dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="209dp"
+        android:background="@drawable/innerblckround_btn"
         android:fontFamily="@font/baloo_paaji"
-        android:text="TextView"
+        android:text="Submit"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/NextScreenDataBtn"
-        android:layout_width="168dp"
-        android:layout_height="61dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="189dp"
-        android:background="@drawable/innerblckround_btn"
-        android:fontFamily="@font/baloo_paaji"
-        android:text="Next"
-        android:textColor="#FFFFFF"
-        android:textSize="34sp" />
+
+    <TextView
+        android:id="@+id/screenTimeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/bottom_navigation_icon_tint"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progressBar2" />
 </RelativeLayout>
