--- a/app/src/main/res/layout/activity_user_diary_entry.xml
+++ b/app/src/main/res/layout/activity_user_diary_entry.xml
@@ -4,19 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/note3"
     tools:context=".DiarySystem.UserDiaryEntryActivity">
 
     <TextView
         android:id="@+id/tv_diary_entry"
-        android:layout_width="369dp"
-        android:layout_height="824dp"
+        android:layout_width="361dp"
+        android:layout_height="670dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="16dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="283dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
+        android:text="User Latest Diary Post"
+        android:textSize="34sp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="67dp" />
+
+    <Button
+        android:id="@+id/DiaryBackBtn"
+        android:layout_width="150dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="24dp"
+        android:text="Back"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
