--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -62,16 +63,14 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textView7"
             android:layout_centerInParent="true"
             android:layout_marginStart="154dp"
             android:layout_marginTop="75dp"
             android:fontFamily="@font/baloo_paaji"
-            android:text="Afternoon"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
-        <ImageButton
+        <Button
             android:id="@+id/medbutton1"
             android:layout_width="230dp"
             android:layout_height="73dp"
@@ -79,8 +78,59 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="-313dp"
             android:layout_marginEnd="44dp"
-            android:background="@drawable/medimagebutton"
-            android:text="Button" />
+            android:background="@drawable/curved_progress_bar"
+            android:textColor="#FFF9F9"
+
+            />
+        <!-- Custom Layout button 1-->
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="13dp"
+            android:background="@drawable/curved_progress_bar"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="30dp"
+                android:src="@drawable/sunrise" />
+
+            <LinearLayout
+                android:layout_width="182dp"
+                android:layout_height="93dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Morning Yoga"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="151dp"
+                    android:layout_height="58dp"
+                    android:layout_margin="-10dp"
+                    android:layout_marginTop="1dp"
+                    android:text="All Right it is time to get up from bed and do some yoga"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <!-- Custom Layout button 1 end-->
+
 
         <TextView
             android:id="@+id/ex1text"
@@ -90,52 +140,140 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="43dp"
             android:fontFamily="@font/baloo_paaji"
-            android:text="Monring "
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
-        <ImageButton
-            android:id="@+id/medbutton2"
-            android:layout_width="242dp"
-            android:layout_height="69dp"
+        <Button
+            android:id="@+id/exbutton3"
+            android:layout_width="230dp"
+            android:layout_height="73dp"
             android:layout_below="@id/ex1text"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="213dp"
-            android:background="@drawable/medimagebutton"
-            android:text="Button" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/medbutton2"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="174dp"
-            android:layout_marginTop="2dp"
-            android:fontFamily="@font/baloo_paaji"
-            android:text="Night"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
-
-        <ImageButton
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_below="@id/textView2"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="-289dp"
-            android:layout_marginEnd="69dp"
-            android:background="@drawable/medimagebutton"
+            android:layout_marginTop="61dp"
+            android:layout_marginEnd="83dp"
+            android:background="@drawable/curved_progress_bar"
+            android:textColor="#F6F4F4" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="230dp"
+            android:layout_height="73dp"
+            android:layout_below="@id/medbutton1"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="79dp"
+            android:background="@drawable/curved_progress_bar"
             android:contentDescription="TODO"
-            android:text="Button" />
+            android:textColor="#FFF7F7" />
+
+
+        <!-- Custom Layout button 1-->
+
+        <!-- Custom Layout button 1 end-->
+
+
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="325dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/curved_progress_bar"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/icon2"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="30dp"
+                android:src="@drawable/night" />
+
+            <LinearLayout
+                android:layout_width="182dp"
+                android:layout_height="93dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Evening Yoga"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/description2"
+                    android:layout_width="151dp"
+                    android:layout_height="58dp"
+                    android:layout_margin="-10dp"
+                    android:layout_marginTop="1dp"
+                    android:text="Ahh don't fall asleep on me yet. Last Session I promise"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="214dp"
+            android:layout_marginEnd="13dp"
+            android:background="@drawable/curved_progress_bar"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/icon3"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="30dp"
+                android:src="@drawable/sunsets" />
+
+            <LinearLayout
+                android:layout_width="182dp"
+                android:layout_height="93dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Afternoon Yoga"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/description3"
+                    android:layout_width="151dp"
+                    android:layout_height="58dp"
+                    android:layout_margin="-10dp"
+                    android:layout_marginTop="1dp"
+                    android:text="I guess your back work or something well.. Back to the routine"
+                    android:textColor="#FFFFFF"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+
+
 
         <LinearLayout
         android:id="@+id/verticalStepProgressBar"
         android:layout_width="76dp"
         android:layout_height="421dp"
         android:layout_alignTop="@+id/medbutton1"
-        android:layout_alignBottom="@+id/medbutton2"
+        android:layout_alignBottom="@+id/exbutton3"
         android:layout_marginEnd="-6dp"
         android:layout_marginBottom="-2dp"
         android:layout_toStartOf="@+id/medbutton1"
@@ -143,66 +281,54 @@
         android:orientation="vertical"
         android:weightSum="2">
 
-        <ImageView
-            android:id="@+id/step1"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:contentDescription="TODO"
-            android:src="@drawable/circle_uncompleted"
-            tools:ignore="ImageContrastCheck" />
-
-        <View
-            android:layout_width="10dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@drawable/vertical_line" />
-
             <ImageView
-                android:id="@+id/step2"
-                android:layout_width="62dp"
-                android:layout_height="69dp"
+                android:id="@+id/step1"
+                android:layout_width="61dp"
+                android:layout_height="52dp"
+                android:contentDescription="TODO"
                 android:src="@drawable/circle_uncompleted"
                 tools:ignore="ImageContrastCheck" />
 
-        <View
-            android:layout_width="9dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@drawable/vertical_line" />
+            <View
+                android:layout_width="7dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/vertical_line" />
 
-        <ImageView
-            android:id="@+id/step3"
-            android:layout_width="65dp"
-            android:layout_height="72dp"
-            android:contentDescription="TODO"
-            android:src="@drawable/circle_uncompleted" />
+            <ImageView
+                android:id="@+id/step2"
+                android:layout_width="61dp"
+                android:layout_height="52dp"
+                android:src="@drawable/circle_uncompleted"
+                tools:ignore="ImageContrastCheck" />
+
+            <View
+                android:layout_width="7dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@drawable/vertical_line" />
+
+            <ImageView
+                android:id="@+id/step3"
+                android:layout_width="61dp"
+                android:layout_height="52dp"
+                android:contentDescription="TODO"
+                android:src="@drawable/circle_uncompleted" />
 
         <!-- Add more ImageView and View elements for additional steps and lines as needed -->
 
     </LinearLayout>
 
-        <Button
-            android:id="@+id/YTbutton"
-            android:layout_width="176dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="57dp"
-            android:layout_marginEnd="107dp"
-            android:text="Explanation Video Click here"
-            android:textColor="#F9F9FA" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/images_recycler_view"
-            android:layout_width="386dp"
-            android:layout_height="228dp"
+            android:layout_width="match_parent"
+            android:layout_height="369dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="7dp"
+            android:layout_marginEnd="0dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/curved_progress_bar" />
 
@@ -212,10 +338,35 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="122dp"
-            android:layout_marginBottom="233dp"
+            android:layout_marginStart="113dp"
+            android:layout_marginBottom="369dp"
             android:fontFamily="@font/baloo_paaji"
             android:text="More Exercises"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/YT"
+            android:layout_width="48dp"
+            android:layout_height="47dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="228dp"
+            android:layout_marginBottom="801dp"
+            android:background="@drawable/curved_progress_bar"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/info" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="273dp"
+            android:layout_marginBottom="799dp"
+            android:text="Why do yoga?"
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="20sp" />
 
