--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,18 +8,18 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/NewsRecyler"
-        android:layout_width="wrap_content"
-        android:layout_height="401dp"
+        android:layout_width="match_parent"
+        android:layout_height="388dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="429dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="463dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
         android:background="@drawable/curved_progress_bar"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
@@ -29,45 +29,64 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecoRecyclerView"
         android:layout_width="365dp"
-        android:layout_height="wrap_content"
+        android:layout_height="93dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="139dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="177dp"
+        android:background="@drawable/curved_progress_bar"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
-        android:id="@+id/whyReco"
+        android:id="@+id/goalText"
         android:layout_width="364dp"
         android:layout_height="27dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="741dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="726dp"
         android:background="@drawable/curved_progress_bar"
         android:fontFamily="@font/baloo_paaji"
-        android:text="Due to your stress level we  have to choose these things  beacuse"
+        android:text="Progress"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="16sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="372dp"
-        android:layout_height="43dp"
+        android:layout_width="373dp"
+        android:layout_height="26dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:layout_gravity="bottom"
-        android:layout_marginStart="6dp"
-        android:layout_marginBottom="470dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginBottom="423dp"
         android:background="@drawable/curved_progress_bar"
         android:fontFamily="@font/baloo_paaji"
         android:text="Explore More!"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="373dp"
+        android:layout_height="26dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_gravity="bottom"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="578dp"
+        android:background="@drawable/curved_progress_bar"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="Daily Progress"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
@@ -78,9 +97,21 @@
         android:layout_height="58dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="26dp"
         android:layout_marginEnd="27dp"
+        android:background="@drawable/curved_progress_bar"
         android:scaleType="centerInside"
         android:src="@drawable/gear" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/GoalrecyclerView"
+        android:layout_width="362dp"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="324dp"
+        android:background="@drawable/curved_progress_bar" />
 
 </RelativeLayout>
