--- a/app/src/main/res/layout/activity_exercise_player.xml
+++ b/app/src/main/res/layout/activity_exercise_player.xml
@@ -40,17 +40,15 @@
         android:text="TextView"
         android:textColor="#FFFFFF" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar4"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="361dp"
-        android:layout_height="33dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/progress_bar_background"
-        android:indeterminate="false"
-        android:progress="0"
-        android:progressDrawable="@drawable/curved_progress_bar" />
+    <TextView
+        android:id="@+id/countdown_timer"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp" />
 
     <Button
         android:id="@+id/button6"
