--- a/app/src/main/res/layout/activity_exercise_player3.xml
+++ b/app/src/main/res/layout/activity_exercise_player3.xml
@@ -36,29 +36,19 @@
     <TextView
         android:id="@+id/ExDialog"
         android:layout_width="match_parent"
-        android:layout_height="148dp"
+        android:layout_height="234dp"
         android:text="TextView"
         android:textColor="#FFFFFF" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="95dp"
-        android:layout_height="71dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        app:srcCompat="@drawable/akwhitelogo" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar4"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="361dp"
-        android:layout_height="33dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/progress_bar_background"
-        android:indeterminate="false"
-        android:progress="0"
-        android:progressDrawable="@drawable/curved_progress_bar" />
+    <TextView
+        android:id="@+id/countdown_timer3"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:fontFamily="@font/baloo_paaji"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp" />
 
     <Button
         android:id="@+id/button6"
