--- a/app/src/main/res/layout/item_user_profile.xml
+++ b/app/src/main/res/layout/item_user_profile.xml
@@ -2,43 +2,53 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:padding="8dp">
 
     <ImageView
         android:id="@+id/profile_image"
         android:layout_width="72dp"
         android:layout_height="56dp"
-        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="5dp"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/ic_baseline_person_24" />
 
     <TextView
         android:id="@+id/profile_email"
-        android:layout_width="138dp"
-        android:layout_height="39dp"
+        android:layout_width="167dp"
+        android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginLeft="-2dp"
-        android:layout_marginEnd="175dp"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="140dp"
         android:layout_toRightOf="@+id/profile_image"
         android:fontFamily="@font/baloo_paaji"
         android:text="example@example.com"
-        android:textColor="#F3F3F3"
-        android:textSize="16sp" />
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/profile_rank"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="108dp"
+        android:layout_height="32dp"
         android:layout_below="@+id/profile_email"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="-20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="9dp"
+        android:layout_marginLeft="-77dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="0dp"
         android:layout_toRightOf="@+id/profile_image"
         android:fontFamily="@font/baloo_paaji"
         android:text="Rank: 1"
-        android:textColor="#F8F5F5"
+        android:textColor="#FFFFFF"
         android:textSize="14sp" />
 
 </RelativeLayout>
